--- a/Trabook/herosection.css
+++ b/Trabook/herosection.css
@@ -130,6 +130,12 @@ body {
                         width: 100%;
                         height: auto;
                     }
+                    >.BG_thum{
+                        position: absolute;
+                        width: 126%;
+                        top: -1vw;
+                        left: -3vw;
+                    }
                 }
             }
 
