--- a/Trabook/blogpage.css
+++ b/Trabook/blogpage.css
@@ -6,7 +6,15 @@
     --BTN_SEC_ORANGE: #FD8D3A;
     --FC-SHAD: #666666;
     --BG-TODO: #F7F8FC;
+    --FC-SEC_SHAD:#999999
 }
+
+.inter {
+    font-family: "Inter", serif;
+    font-optical-sizing: auto;
+    font-weight: weight;
+    font-style: normal;
+  }
 
 .flex{
     display: flex;
@@ -37,17 +45,59 @@ body{
                     }
                 }
             }
-            
-        }
-        .blog_info{
-            padding: 5% 0;
-            .blog_details{
-                .info{
-                    .blog_img{
-                        
+            .blog_info{
+                width: 100%;
+                height: 77%;
+                padding: 5% 0;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                .blog_details{
+                    width: 100%;
+                    height: 80%;
+                    justify-content: space-evenly;
+                    .info{
+                        width: 22%;
+                        height: 100%;
+                        flex-direction: column;
+                        .img_blog{
+                            height: 65%;
+                            width: 100%;
+                            .blog_img{
+                                width: 100%;
+                                height: auto;   
+                            }
+                        }
+                        .txt_blog{
+                            height: 35%;
+                            width: 100%;
+                            flex-direction: column;
+                            justify-content: space-evenly;
+                            .blog_txt{
+                                font-size: 0.9vw;
+                                color: var(--FONT_COLOR);
+                                width: 90%;
+                            }
+                            .postDate{
+                                color: var(--FC-SEC_SHAD);
+                                font-size: 0.8vw;
+                            }
+                        }
+
+                    }
+                }
+                .slider{
+                    width: 10%;
+                    height: 10%;
+                    justify-content: center;
+                    align-items: center;
+                    img{
+                        width: 50%;
                     }
                 }
             }
+            
         }
+        
     }
 }
